style.css
* {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Saira Condensed'
}

a {
  text-decoration: none
}

li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.header-container {
  margin: 0;
  padding: 2% 5%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  top: 0;
  background-color: yellow;
}

.TopHeader {
  display: flex;
  width: 100%;
  flex-direction: row;
  justify-content: space-between; 
}

.Phases {
  display: flex; 
}

.P1DropDown {
  display: flex;
  padding: 0 0.5rem;
}

.Website {
  display: flex;
  padding: 0 3rem;
}

.logo-container {
  display: flex;
  align-items: center;
  font-size: max(1rem, 2vw);
}

.nav-container {
  padding: 0;
  display: flex;
  justify-content: space-evenly;
  width: clamp(300px, 800px)
}

.nav-container ul {
  display: flex;
}

p {
  display: flex;
}

.CardTypes {
  display: flex;
}

.CardTypes li {
  font-size: max(0.5rem, 1vw); 
  padding: 0 0.2rem;
}

/* QUESTION 1 AND ANSWER*/

.P-title1 {
  display: flex;
  justify-content: center;
  background-color: limegreen;
  font-size: max(2rem, 2vw);
}

.P1-question {
  display: flex;
  padding: 15% 2% 10vw 2%;
  justify-content: center;
  font-size: max(2rem, 2vw);
}

.P1-Q {
  display: flex;
  text-align: center;
}

.P1-answer {
  display: flex;
  padding: 15% 2% 20vw 2%;
  justify-content: center;
  flex-direction: column;
}

.P1-HFA {
  font-size: max(2rem, 2vw);
  display: flex;
  margin: 0 15vw 0 15vw; 
  justify-content: center;
  flex-direction: column;
  background-color: snow;
}

.P1-HFA p {
  display: flex;
  justify-content: center;
}

.P1-A {
  display: none;
  text-align: center;
  justify-content: center;
}

.P1-HFA:hover .P1-A {
  display: flex;
}

.P1-HistoryPeople {
  background-color: violet;
}

.P1-MoviesTelevision {
  background-color: burlywood;
}

.P1-MusicMusicians {
  background-color: lightsalmon;
}

.P1-NationsLocations {
  background-color: lightskyblue;
}

.P1-SportsGames {
  background-color: brown;
}

.P1-ScienceTechnology {
  background-color: forestgreen;
}

.P1-PoetryProse {
  background-color: darkblue;
}

.P1-PopCultureCelebrities {
  background-color: palevioletred;
}

.P1-Wild {
  -webkit-animation: colorchange 7s infinite;
        animation: colorchange 7s infinite;
      }
      @-webkit-keyframes colorchange {
        0% {
          background: red;
        }
        30% {
          background: yellow;
        }
        55% {
          background: green;
        }
        80% {
          background: blue;
        }
        100% {
          background: purple;
        }
      }
      
      @-webkit-keyframes colorchange {
        0% {
          background: purple;
        }
        15% {
          background: red;
        }
        45% {
          background: yellow;
        }
        75% {
          background: green;
        }
        100% {
          background: blue;
        }
}

/* QUESTION 2 AND ANSWER*/

.P-title2 {
  display: flex;
  justify-content: center;
  background-color: lightgoldenrodyellow;
  font-size: max(2rem, 2vw);
}

.P2-question {
  display: flex;
  background-color: lightyellow;
  padding: 15% 2% 10vw 2%;
  justify-content: center;
  font-size: max(2rem, 2vw);
}

.P2-Q {
  display: flex;
  text-align: center;
}

.P2-answer {
  display: flex;
  background-color: lightyellow;
  padding: 15% 2% 20vw 2%;
  justify-content: center;
  flex-direction: column;
}

.P2-HFA {
  font-size: max(2rem, 2vw);
  display: flex;
  margin: 0 15vw 0 15vw;
  justify-content: center;
  flex-direction: column;
  background-color: snow;
}

.P2-HFA p {
  display: flex;
  justify-content: center;
}

.P2-A {
  display: none;
  text-align: center;
  justify-content: center;
}

.P2-HFA:hover .P2-A {
  display: flex;
}

/* QUESTION 3 AND ANSWER*/

.P-title3 {
  display: flex;
  justify-content: center;
  background-color: lightblue;
  font-size: max(2rem, 2vw);
}

.P3-question {
  display: flex;
  background-color: lightblue;
  padding: 15% 2% 10vw 2%;
  justify-content: center;
  font-size: max(2rem, 2vw);
}

.P3-Q {
  display: flex;
  text-align: center;
}

.P3-answer {
  display: flex;
  background-color: lightblue;
  padding: 15% 2% 20vw 2%;
  justify-content: center;
  flex-direction: column;
}

.P3-HFA {
  font-size: max(2rem, 2vw);
  display: flex;
  margin: 0 15vw 0 15vw;
  justify-content: center;
  flex-direction: column;
  background-color: snow;
}

.P3-HFA p {
  display: flex;
  justify-content: center;
}

.P3-A {
  display: none;
  text-align: center;
  justify-content: center;
}

.P3-HFA:hover .P3-A {
  display: flex;
}

